# C-Chess

./: .gitignore  CMakeLists.txt  Log  README  README.md  main.c  projectStructure.txt  updateLog.py
Model/: board.h  boardExample.txt
data/: Log  PieceBitMask.txt  resize_images.py  updateLog.py
include/: board.h  paths.h  piece.h  sprite.h
lib/: CMakeLists.txt
src/: board.c  board.h  main.c  paths.c  piece.c  piece.h  sprite.c  utility.c  utility.h
tests/: CMakelists.txt  test_fail.c  test_main.c
